; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/demos/maze/extr_maze.c_backup.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/demos/maze/extr_maze.c_backup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@sqnum = common dso_local global i64 0, align 8
@move_list = common dso_local global %struct.TYPE_2__* null, align 8
@cur_sq_x = common dso_local global i32 0, align 4
@cur_sq_y = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @backup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @backup() #0 {
  %1 = load i64, i64* @sqnum, align 8
  %2 = add i64 %1, -1
  store i64 %2, i64* @sqnum, align 8
  %3 = load i64, i64* @sqnum, align 8
  %4 = icmp ule i64 0, %3
  br i1 %4, label %5, label %16

5:                                                ; preds = %0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @move_list, align 8
  %7 = load i64, i64* @sqnum, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* @cur_sq_x, align 4
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @move_list, align 8
  %12 = load i64, i64* @sqnum, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* @cur_sq_y, align 4
  br label %16

16:                                               ; preds = %5, %0
  %17 = load i64, i64* @sqnum, align 8
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
